# cafeteria

./: Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
sources/cafeteria/: app.py  database.py  settings.py
sources/cafeteria/internal/: bases.py  exceptions.py  models.py  repositories.py  services.py
